--- a/src/main/resources/templates/dashboard/category/create.html
+++ b/src/main/resources/templates/dashboard/category/create.html
@@ -10,7 +10,7 @@
 <div layout:fragment="body">
     <form method="post">
         <div class="form-group d-flex">
-            <input type="text" name ="name" class="form-control col-4" placeholder="Category name"/>
+            <input type="text" name ="name" class="form-control col-4" placeholder="Category name" required/>
             <input type="submit" value="Create" class="btn btn-success"/>
         </div>
     </form>
