--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -1,107 +1,127 @@
 <!DOCTYPE html>
-<html
-        xmlns:th="http://thymeleaf.org"
-        xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-        layout:decorate="~{layout}">
+<html xmlns:th="http://thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout}">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
 <section layout:fragment="body">
-<!-- cart -->
-<div class="cart-section mt-150 mb-150">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8 col-md-12">
-                <div class="cart-table-wrap">
-                    <table class="cart-table">
-                        <thead class="cart-table-head">
-                        <tr class="table-head-row">
-                            <th class="product-remove"></th>
-                            <th class="product-image">Product Image</th>
-                            <th class="product-name">Name</th>
-                            <th class="product-price">Price</th>
-                            <th class="product-quantity">Quantity</th>
-                            <th class="product-total">Total</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr th:each="cart : ${carts}" class="table-body-row">
-                            <td class="product-remove"><a href="#"><i class="far fa-window-close"></i></a></td>
-                            <td class="product-image"><img src="assets/img/products/product-img-1.jpg" alt=""></td>
-                            <td class="product-product" th:text="${cart.productDto != null ? cart.productDto.product : 'N/A'}">Strawberry</td>
-                            <td class="product-price" th:text="${cart.productDto != null ? cart.productDto.price : 'N/A'}">$85</td>
-                            <td class="product-quantity" th:text="${cart.quantity}"><input type="number" placeholder="0"></td>
-                            <td class="product-total" th:text="${cart.totalPrice}">1</td>
-                        </tr>
-                        </tbody>
-                    </table>
+    <!-- cart -->
+    <div class="cart-section mt-150 mb-150">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-md-12">
+                    <div class="cart-table-wrap">
+                        <table class="cart-table">
+                            <thead class="cart-table-head">
+                            <tr class="table-head-row">
+                                <th class="product-remove"></th>
+                                <th class="product-image">Product Image</th>
+                                <th class="product-name">Name</th>
+                                <th class="product-price">Price</th>
+                                <th class="product-quantity">Quantity</th>
+                                <th class="product-total">Total</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr th:each="cart : ${carts}"  class="table-body-row">
+                                <td class="product-remove">
+                                    <form th:action="@{/cart/{id}(id=${cart.id})}" method="post">
+                                        <input type="hidden" name="action" value="remove">
+                                        <button type="submit"><i class="far fa-window-close"></i></button>
+                                    </form>
+                                </td>
+                                <td class="product-image"><img th:src="'/uploads/'+${cart.product.photoUrl}" alt=""></td>
+                                <td class="product-product" th:text="${cart.product.product}">Strawberry</td>
+                                <td class="product-price" th:text="${cart.product.price}">$85</td>
+                                <td class="product-quantity">
+                                    <form th:action="@{/cart/{id}(id=${cart.id})}" method="post">
+                                        <input type="number" name="quantity" th:value="${cart.quantity}" step="0.01">
+                                        <input type="hidden" name="action" value="update">
+                                        <button type="submit">Update</button>
+                                    </form>
+                                </td>
+                                <td class="product-total" th:text="${cart.quantity}*${cart.product.price}+' azn'">1</td>
+                            </tr>
+<!--                            <form th:action="${/cart}" method="post">-->
+<!--                                <div class="form-group" >-->
+<!--                                    <label for="address">Ünvan:</label >-->
+<!--                                    <input th:value="${order.adress}" type="text" id="address" name="order.adress" class="form-control" required>-->
+<!--                                </div>-->
+<!--                                <button type="submit" class="btn btn-primary">Gönder</button>-->
+<!--                            </form>-->
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
-            </div>
 
-            <div class="col-lg-4">
-                <div class="total-section">
-                    <table class="total-table">
-                        <thead class="total-table-head">
-                        <tr class="table-total-row">
-                            <th>Total</th>
-                            <th>Price</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr class="total-data">
-                            <td><strong>Subtotal: </strong></td>
-                            <td>$500</td>
-                        </tr>
-                        <tr class="total-data">
-                            <td><strong>Shipping: </strong></td>
-                            <td>$45</td>
-                        </tr>
-                        <tr class="total-data">
-                            <td><strong>Total: </strong></td>
-                            <td>$545</td>
-                        </tr>
-                        </tbody>
-                    </table>
-                    <div class="cart-buttons">
-                        <a href="cart.html" class="boxed-btn">Update Cart</a>
-                        <a href="checkout.html" class="boxed-btn black">Check Out</a>
+                <div class="col-lg-4">
+                    <div class="total-section">
+                        <table class="total-table">
+                            <thead class="total-table-head">
+                            <tr class="table-total-row">
+                                <th>Total</th>
+                                <th>Price</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr class="total-data">
+                                <td><strong>Subtotal: </strong></td>
+                                <td th:text="${subtotal}">500</td>
+                            </tr>
+                            <tr class="total-data">
+                                <td><strong>Shipping: </strong></td>
+                                <td th:text="${shipping}">45</td>
+                            </tr>
+                            <tr class="total-data">
+                                <td><strong>Total: </strong></td>
+                                <td th:text="${total}">545</td>
+                            </tr>
+                            </tbody>
+
+                        </table>
+                        <form method="post" action="/order" class="cart-buttons">
+                            <input type="hidden" name="userId" th:value="${userId}" />
+                            <textarea type="text" class="form-control" name="address"> </textarea>
+                            <input type="hidden" name="cartData" th:value="${cart}" />
+                            <button type="submit" class="boxed-btn black">Sifariş</button>
+                        </form>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-<!-- end cart -->
+    <!-- end cart -->
 
-<!-- logo carousel -->
-<div class="logo-carousel-section">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="logo-carousel-inner">
-                    <div class="single-logo-item">
-                        <img src="assets/img/company-logos/1.png" alt="">
-                    </div>
-                    <div class="single-logo-item">
-                        <img src="assets/img/company-logos/2.png" alt="">
-                    </div>
-                    <div class="single-logo-item">
-                        <img src="assets/img/company-logos/3.png" alt="">
-                    </div>
-                    <div class="single-logo-item">
-                        <img src="assets/img/company-logos/4.png" alt="">
-                    </div>
-                    <div class="single-logo-item">
-                        <img src="assets/img/company-logos/5.png" alt="">
+    <!-- logo carousel -->
+    <div class="logo-carousel-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="logo-carousel-inner">
+                        <div class="single-logo-item">
+                            <img src="/front/assets/img/company-logos/1.png" alt="">
+                        </div>
+                        <div class="single-logo-item">
+                            <img src="/front/assets/img/company-logos/2.png" alt="">
+                        </div>
+                        <div class="single-logo-item">
+                            <img src="/front/assets/img/company-logos/3.png" alt="">
+                        </div>
+                        <div class="single-logo-item">
+                            <img src="/front/assets/img/company-logos/4.png" alt="">
+                        </div>
+                        <div class="single-logo-item">
+                            <img src="/front/assets/img/company-logos/5.png" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-<!-- end logo carousel -->
+    <!-- end logo carousel -->
 </section>
 </body>
 </html>
