--- a/src/main/resources/templates/dashboard/article/create.html
+++ b/src/main/resources/templates/dashboard/article/create.html
@@ -10,20 +10,20 @@
 <div layout:fragment="body">
     <form method="post" enctype="multipart/form-data">
         <div class="form-group">
-            <input type="text" name ="product" class="form-control col-4" placeholder="product"/>
+            <input type="text" name ="product" class="form-control col-4" placeholder="product" required/>
         </div>
         <div class="form-group">
-            <input type="number" step="0.01" name ="weight" class="form-control col-4" placeholder="weight"/>
+            <input type="number" step="0.01" name ="weight" class="form-control col-4" placeholder="weight" required/>
         </div>
         <div class="form-group">
-            <input type="number" step="0.01" name ="price" class="form-control col-4" placeholder="price"/>
+            <input type="number" step="0.01" name ="price" class="form-control col-4" placeholder="price" required/>
         </div>
         <div class="form-group">
-            <input type="file" name ="image" class="form-control col-4"/>
+            <input type="file" name ="image" class="form-control col-4" required/>
         </div>
         <div class="form-group">
             <select name="categoryId" class="form-control col-4">
-                <option th:text="${category.name}" th:value="${category.id}" th:each="category: ${categories}"></option>
+                <option th:text="${category.name}" th:value="${category.id}" th:each="category: ${categories}" ></option>
             </select>
         </div>
         <div class="form-group">
