--- a/src/main/resources/templates/dashboard/news/create.html
+++ b/src/main/resources/templates/dashboard/news/create.html
@@ -10,16 +10,16 @@
 <div layout:fragment="body">
     <form method="post" enctype="multipart/form-data">
         <div class="form-group">
-            <input type="text" name="title" class="form-control col-4" placeholder="Title"/>
+            <input type="text" name="title" class="form-control col-4" placeholder="Title" required/>
         </div>
         <div class="form-group">
-            <textarea id="cemil" type="text" name="description" class="form-control col-4" placeholder="Description"></textarea>
+            <textarea id="cemil" type="text" name="description" class="form-control col-4" placeholder="Description" required></textarea>
         </div>
         <div class="form-group">
-            <input type="file" name="image" class="form-control col-4"/>
+            <input type="file" name="image" class="form-control col-4" required/>
         </div>
         <div class="form-group">
-            <input type="date" id="date" name="date" class="form-control col-4"/>
+            <input type="date" id="date" name="date" class="form-control col-4" required/>
         </div>
         <div class="form-group">
             <input type="submit" value="Create" class="btn btn-success"/>
