--- a/src/main/resources/templates/dashboard/news/update.html
+++ b/src/main/resources/templates/dashboard/news/update.html
@@ -12,18 +12,18 @@
     <form method="post" enctype="multipart/form-data">
         <div class="form-group">
             <input type="text" name="title" th:value="${news.title}" class="form-control col-4"
-                   placeholder="news title"/>
+                   placeholder="news title" required/>
         </div>
         <div class="form-group">
         <input type="text" name="description" th:value="${news.description}" class="form-control col-4"
-               placeholder="news description"/>
+               placeholder="news description" required/>
     </div>
 
         <div class="form-group">
-            <input type="file" name="image" class="form-control col-4"/>
+            <input type="file" name="image" class="form-control col-4" required/>
         </div>
         <div class="form-group">
-            <input type="date" id="date" name="date" th:value="${news.date}" class="form-control col-4"/>
+            <input type="date" id="date" name="date" th:value="${news.date}" class="form-control col-4" required/>
         </div>
 
         <div class="form-group">
