--- a/src/main/resources/templates/news_detail.html
+++ b/src/main/resources/templates/news_detail.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html
         xmlns:th="http://thymeleaf.org"
+        xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3"
         xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
         layout:decorate="~{layout}">
 <head>
