--- a/src/main/resources/templates/dashboard/layout.html
+++ b/src/main/resources/templates/dashboard/layout.html
@@ -83,7 +83,11 @@
 
         <!-- Divider -->
         <hr class="sidebar-divider my-0">
-
+        <li class="nav-item">
+            <a class="nav-link" href="/dashboard/orders">
+                <i class="fas fa-fw fa-tachometer-alt"></i>
+                <span>Orders</span></a>
+        </li>
 
         <!-- Sidebar Toggler (Sidebar) -->
         <div class="text-center d-none d-md-inline">
